fixing bug #21085.  xpinstall now quits gracefully when destination file already exists in a file move and file copy operation.  r=cathleen